--- a/SpringSecurityTest/tenmo-server/src/main/resources/application.properties
+++ b/SpringSecurityTest/tenmo-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/gregtestsecurity
-spring.datasource.name=gregtestsecurity
+spring.datasource.url=jdbc:postgresql://localhost:5432/gregsecuritytest
+spring.datasource.name=gregsecuritytest
 spring.datasource.username=postgres
 spring.datasource.password=Gregory8894
 
